<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.imc_linearlayout.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/poidsTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#ff0000"
            android:text="@string/poidsTxt"
            android:textStyle="bold"
            android:layout_weight="0" />
        <EditText
            android:id="@+id/poidsEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:hint="@string/poidsTxt"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
        android:id="@+id/tailleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#ff0000"
        android:text="@string/tailleTxt"
        android:textStyle="bold"
            android:layout_weight="0" />
        <EditText
            android:id="@+id/tailleEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:hint="@string/tailleTxt"
            android:layout_weight="1" />
    </LinearLayout>

    <RadioGroup
        android:id="@+id/uniteRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/metreRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/metreTxt"/>
        <RadioButton
            android:id="@+id/centimetreRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/centimetreTxt"
            android:checked="true"/>

    </RadioGroup>
    <CheckBox
        android:id="@+id/megaFonctionCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/megaFonctionTxt"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/calculerIMCButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calculerImcTxt"
            android:layout_weight="1"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp" />

        <Button
            android:id="@+id/razButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/razTxt"
            android:layout_weight="1"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/resultatTextView"
        android:text="@string/resultatTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/hintTextView"
        android:text="@string/hintTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</LinearLayout>
